--- a/Trabajo_Practico/Seminario_Algoritmos.ipynb
+++ b/Trabajo_Practico/Seminario_Algoritmos.ipynb
@@ -89,15 +89,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 284,
-      "metadata": {
-        "id": "iq6Fe32MgpDX"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "dzynfVJahHoY"
@@ -330,15 +321,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 288,
-      "metadata": {
-        "id": "pDA-rg3Gj5Lz"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "rlnTYgY1j6I2"
@@ -395,18 +377,10 @@
         "  arr_hor = []\n",
         "  for part_hor in arr_part_hor:\n",
         "    arr_hor.append(part_hor.horario)\n",
-        "  if VERBOSE:\n",
-        "    print(\"Array horarios: \" + str(arr_hor))\n",
         "  arr_coinc = get_array_coincidencias(arr_hor)\n",
-        "  if VERBOSE:\n",
-        "    print(\"Array coincidencias: \" + str(arr_coinc))\n",
         "\n",
         "  for elem in arr_part_hor:\n",
-        "    if VERBOSE:\n",
-        "      print(\"Corrigiendo audiencia \" + str(elem)  + ', base: ' + str(elem.audiencia_base), ', num ocurrencias: ' + str(arr_coinc[ARRAY_HORARIOS.index(elem.horario)]))\n",
-        "    elem.corregir_coincidencias(arr_coinc[ARRAY_HORARIOS.index(elem.horario)])\n",
-        "    if VERBOSE:\n",
-        "      print(\"Nueva audiencia: \" + str(elem.audiencia_coincidencias ))\n"
+        "    elem.corregir_coincidencias(arr_coinc[ARRAY_HORARIOS.index(elem.horario)])\n"
       ]
     },
     {
@@ -418,10 +392,6 @@
       "outputs": [],
       "source": [
         "def calc_audiencia(arr_part_hor):\n",
-        "  if VERBOSE:\n",
-        "    print(\"||||||||||||||||||||||||||||||||||||\")\n",
-        "  if VERBOSE:\n",
-        "    print(\"Calculando coincidencias...\")\n",
         "  correg_coincidencias(arr_part_hor)\n",
         "  aud_tot = 0\n",
         "  for elem in arr_part_hor:\n",
@@ -441,21 +411,13 @@
         "\n",
         "# Todas las audiencias suman, por lo que no debemos preocuparnos por casos en los que haya partidos no asignados, pues esa solución nunca será marcada como la mejor\n",
         "def asignar_partidos(arr_hor, arr_part, arr_part_hor):\n",
-        "  if VERBOSE:\n",
-        "    print(\"Array horarios pendientes de asignar: \" + str(arr_hor))\n",
-        "    print(\"Array partidos pendientes de asignar: \" + str(arr_part))\n",
-        "    print(\"Array partidos-horarios asignados: \" + str(arr_part_hor))\n",
         "  # Encontramos el primer horario en el que debe haber un partido\n",
         "  arr_nonz = np.nonzero(arr_hor)[0]\n",
         "\n",
         "  if len(arr_nonz) > 0:\n",
         "    index_hor = arr_nonz[0]\n",
-        "    if VERBOSE:\n",
-        "      print(\"Siguiente indice a rellenar: \" + str(index_hor))\n",
         "    # Asignamos en ese horario un partido (cubrimos todas las posibilidades)\n",
         "    for part in arr_part:\n",
-        "      if VERBOSE:\n",
-        "        print(\"Rellenamos con \" + str(part))\n",
         "      arr_hor_aux = arr_hor.copy()\n",
         "      arr_part_hor_aux = arr_part_hor.copy()\n",
         "      arr_part_aux = arr_part.copy()\n",
@@ -466,12 +428,8 @@
         "      audiencia, arr_part_hor_sol = asignar_partidos(arr_hor_aux, arr_part_aux, arr_part_hor_aux)\n",
         "  else:\n",
         "    # Ya hemos asignado todos los partidos\n",
-        "    if VERBOSE:\n",
-        "      print(\"-----------------\\nNo quedan partidos por rellenar, calculando audiencia...\")\n",
         "    audiencia = calc_audiencia(arr_part_hor)\n",
         "    arr_part_hor_sol = arr_part_hor\n",
-        "    if VERBOSE:\n",
-        "      print(\"Audiencia calculada para: \" +str(arr_part_hor_sol) +': ' + str(audiencia)+'\\n---------------------------------------------------')\n",
         "  return audiencia, arr_part_hor_sol"
       ]
     },
@@ -484,54 +442,34 @@
       "outputs": [],
       "source": [
         "def asignar_horarios(arr_hors, partidos_restantes, index):\n",
-        "  if VERBOSE:\n",
-        "    print(\"Partidos restantes: \" + str(partidos_restantes), \"Índice: \" + str(index))\n",
         "  arr_aux = arr_hors.copy()\n",
-        "  if VERBOSE:\n",
-        "    print(arr_aux)\n",
         "  max_aux = 0\n",
         "  arr_max_hors = []\n",
         "  part_rest = partidos_restantes\n",
         "  for i in range(partidos_restantes + 1):\n",
         "    part_rest = partidos_restantes\n",
-        "    if VERBOSE:\n",
-        "      print('\\nEn posición: ' + str(index) + ', partidos que vamos a asignar: ' + str(i) +' de ' + str(partidos_restantes) + ' partidos que restan\\n')\n",
         "    if index == len(arr_aux)-1:\n",
-        "      if VERBOSE:\n",
-        "        print(\"Es el ultimo horario asi que asignamos todos los partidos a este horario\")\n",
         "      #Asignamos todos los partidos al último índice porque es la última opción\n",
         "      arr_aux[index] = part_rest\n",
         "      part_rest = 0\n",
         "    else:\n",
         "      arr_aux[index] = i\n",
         "      part_rest -= i\n",
-        "    if VERBOSE:\n",
-        "      print(\"Array de partidos por horas: \" + str(arr_aux))\n",
         "    if part_rest == 0:\n",
-        "      if VERBOSE:\n",
-        "        print(\"Sin partidos restantes\")\n",
         "      arr_part_hor = []\n",
         "      aud, arr_sols = asignar_partidos(arr_aux, ARRAY_PARTIDOS, arr_part_hor)\n",
         "    else:\n",
-        "      if VERBOSE:\n",
-        "        print(\"aud: \" + str(max_aux))\n",
-        "        print(arr_max_hors)\n",
         "      aud, arr_sols = asignar_horarios(arr_aux, part_rest, index + 1)\n",
         "    if aud > max_aux:\n",
-        "      if VERBOSE:\n",
-        "        print(\"Max_aux = \" + str(max_aux) + ', aud_recibida = ' +str(aud) + ', Reordenando...')\n",
-        "        print(\"arr_max_hors = \" + str(arr_max_hors) + ', arr_sols = ' +str(arr_sols) + ', Reordenando...')\n",
         "      max_aux = aud\n",
         "      arr_max_hors = arr_sols\n",
-        "  if VERBOSE:\n",
-        "    print(\"arr_max_hors\" + str(arr_max_hors))\n",
         "  return max_aux, arr_max_hors"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"num_partidos = len(ARRAY_PARTIDOS)\n",
+        "num_partidos = len(ARRAY_PARTIDOS)\n",
         "num_horarios = len(ARRAY_HORARIOS)\n",
         "\n",
         "# En num_partidos_horario almacenamos el número de partidos en cada horario, inicialmente 0 y vamos a iterar sobre todas las soluciones\n",
@@ -539,32 +477,13 @@
         "audiencia, arr_sols = asignar_horarios(num_partidos_horario, num_partidos, 0)\n",
         "print('SOLUCIONES:')\n",
         "print(\"Audiencia total: \" + str(audiencia))\n",
-        "print(\"Partidos: \" + str(arr_sols))\"\"\"\n"
+        "print(\"Partidos: \" + str(arr_sols))\n"
       ],
       "metadata": {
-        "id": "yXwnYGPRxNAv",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "a97a22de-8da7-4a20-b30f-86a1d8ef4c7e"
+        "id": "yXwnYGPRxNAv"
       },
-      "execution_count": 295,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'num_partidos = len(ARRAY_PARTIDOS)\\nnum_horarios = len(ARRAY_HORARIOS)\\n\\n# En num_partidos_horario almacenamos el número de partidos en cada horario, inicialmente 0 y vamos a iterar sobre todas las soluciones\\nnum_partidos_horario = np.zeros(num_horarios)\\naudiencia, arr_sols = asignar_horarios(num_partidos_horario, num_partidos, 0)\\nprint(\\'SOLUCIONES:\\')\\nprint(\"Audiencia total: \" + str(audiencia))\\nprint(\"Partidos: \" + str(arr_sols))'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 295
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -592,15 +511,6 @@
         "Teniendo en cuenta el número de bucles anidados que estamos tratando, la complejidad del algoritmo es de tipo $O(f) = (n!)^2*3n$, siendo $n$ el número de partidos. Es decir, se tata de una complejidad horrible que crece mucho con cada nuevo elemento que añadimos.\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 295,
-      "metadata": {
-        "id": "rvZWwL-ckRST"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -697,7 +607,7 @@
         "    arr_p_aux = array_partidos.copy()\n",
         "    arr_h_aux = array_horarios.copy()\n",
         "    poblacion.append(assign_horarios(arr_p_aux,arr_h_aux))\n",
-        "  return poblacion\n"
+        "  return poblacion"
       ],
       "metadata": {
         "id": "FbV8xepUxE42"
@@ -832,8 +742,7 @@
         "  mut1 = mutate(hijo1, prob_mutacion)\n",
         "  mut2 = mutate(hijo2, prob_mutacion)\n",
         "\n",
-        "  return [hijo1, hijo2, mut1, mut2]\n",
-        "\n"
+        "  return [hijo1, hijo2, mut1, mut2]"
       ],
       "metadata": {
         "id": "FAsfEcuWCoFB"
@@ -870,7 +779,7 @@
         "  poblacion_ordenada = sorted([[calc_audiencia(solucion), solucion] for solucion in poblacion ], key= lambda x:x[0], reverse=True)\n",
         "\n",
         "  #Devolvemos porcentaje determinado por elitismo de mejores soluciones y el resto se eligen aleatoriamente\n",
-        "  return [x[1] for x in poblacion_ordenada][:int(tam_poblacion*prob_elitismo)] + random.sample([x[1] for x in poblacion_ordenada][int(tam_poblacion*prob_elitismo):], int(tam_poblacion*(1-prob_elitismo)))\n"
+        "  return [x[1] for x in poblacion_ordenada][:int(tam_poblacion*prob_elitismo)] + random.sample([x[1] for x in poblacion_ordenada][int(tam_poblacion*prob_elitismo):], int(tam_poblacion*(1-prob_elitismo)))"
       ],
       "metadata": {
         "id": "_aOn7YOz8wbl"
@@ -906,7 +815,7 @@
         "    print(\"Generacion #\", str(cond_parada), \": audiencia \" , str(round(sol[0], 5)) , \", solución es:\" , str(sol[1]))\n",
         "    pbar.update(1)\n",
         "    cond_parada += 1\n",
-        "  return sol\n"
+        "  return sol"
       ],
       "metadata": {
         "id": "_UiDP7ZHwiIu"
