--- a/Retos/Algoritmos_R1.ipynb
+++ b/Retos/Algoritmos_R1.ipynb
@@ -174,7 +174,7 @@
         "    if n <= 1:\n",
         "        return n\n",
         "    else:\n",
-        "        return fibonacci_rec(n-1) + fibonacci_rec(n-2)\n"
+        "        return fibonacci_rec(n-1) + fibonacci_rec(n-2)"
       ]
     },
     {
@@ -394,10 +394,7 @@
         "    tablero = [[0] * num_reinas for i in range(num_reinas)]\n",
         "    sols = []\n",
         "    n_reinas_vuelta_atras(tablero, 0, num_reinas, sols)\n",
-        "    return sols\n",
-        "\n",
-        "\n",
-        "\n"
+        "    return sols"
       ]
     },
     {
@@ -801,9 +798,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F6e0trF42ct5",
-        "outputId": "0f03f0bd-ca2a-4d66-ef80-1144f04ad9d3"
+        "outputId": "9dcc7b11-d173-44d8-995b-7a75e66acc75"
       },
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,7 +816,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 33
         }
       ]
     }
